--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "root": true,
   "env": {
-    "node": true,
-    "es6": true
+    "browser": true
   },
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -10,7 +9,19 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "plugin:jsx-a11y/recommended",
     "prettier"
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "overrides": [
+    {
+      "files": ["*.js", "*.jsx"]
+    }
   ]
-
 }
